<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_photo"
            android:icon="@mipmap/ic_folder_multiple_image"
            android:title="@string/nav_photo" />
        <item
            android:id="@+id/nav_countries"
            android:icon="@mipmap/ic_flag_country"
            android:title="@string/nav_countries" />
        <item
            android:id="@+id/nav_interests"
            android:icon="@mipmap/ic_star"
            android:title="@string/nav_interests" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@mipmap/ic_contacts"
            android:title="@string/nav_contacts" />
    </group>

    <group  android:id="@+id/menu_bottom"
            android:checkableBehavior="none">


    <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_logout"
                android:title="@string/nav_logout" />

    </group>

</menu>
